Java: Fix codeql java build
Signed-off-by: Prateek Kumar <prateek.kumar@improving.com>